--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
         // ==========================================
         // CONFIGURATION (DEVELOPER MUST FILL THIS)
         // ==========================================
-        const YOUR_GOOGLE_CLIENT_ID = "YOUR_CLIENT_ID_HERE"; // Console থেকে পাওয়া Client ID এখানে বসান
-        const YOUR_GOOGLE_API_KEY = "YOUR_API_KEY_HERE";     // Console থেকে পাওয়া API Key এখানে বসান
+        const YOUR_GOOGLE_CLIENT_ID = "229880141922-3qbr26c4c4j3lboh6qaaonlo6rl5fci2.apps.googleusercontent.com"; // Console থেকে পাওয়া Client ID এখানে বসান
+        const YOUR_GOOGLE_API_KEY = "AIzaSyCoHXkX_jhtDVGe5y2Xuel4a1ltB--SeQI";     // Console থেকে পাওয়া API Key এখানে বসান
         // ==========================================
 
         const DB_KEY = 'tally_inv_v5';
