--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             --border: #333;
         }
 
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', serif; }
         body { background: var(--bg); color: var(--text); padding-bottom: 70px; }
 
         /* HEADER */
